# PINGY

./: .gitignore  PRIVACY_POLICY.md  README.MD  build.gradle  build.gradle.kts  gradle.properties  local.properties  settings.gradle  settings.gradle.kts
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/cpp/: CMakeLists.txt
androidApp/src/main/res/values/: themes.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/app/: ComposeActivity.kt
app/src/main/kotlin/app/logic/: Constants.kt  Panel.kt  PingyUtils.kt  ScreenDimensions.kt
app/src/main/kotlin/app/ui/: ComposeActivity.kt  MaterialColors.kt  Paletting.kt  PingGraph.kt
app/src/main/kotlin/app/ui/compose/: PingGraph.kt
app/src/main/kotlin/app/utils/: Constants.kt  Panel.kt  PingyUtils.kt
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml  themes.xml
buildSrc/src/main/kotlin/: AppConfig.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/iosApp/: Info.plist  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
shared/: build.gradle.kts  shared.podspec
shared/native/: icmp_ping.c
shared/src/commonMain/composeResources/drawable/: pingy_vector.xml
shared/src/iosMain/kotlin/: main.kt
shared/src/jsMain/kotlin/: main.kt
shared/src/jsMain/resources/: index.html
shared/src/jvmMain/kotlin/: main.kt
shared/src/jvmMain/resources/native/darwin-arm64/: libpingy_icmp.dylib
shared/src/nativeInterop/cinterop/: IcmpPing.def
(+31 files in other folders)
